<resources>
    <string name="app_name" translatable="false">DevFest SPB</string>
    <string name="post_title" translatable="false">Как мы ускоряем Яндекс под Android</string>
    <string name="speaker" translatable="false">Артур Василов</string>
    <string name="tag_android" translatable="false">Android</string>
    <string name="all_post" translatable="false">Все доклады</string>
    <string name="post_annotation" translatable="false">
        Многие Android-разработчики знают стандартные методы профилирования приложений,
        инструменты для отладки и улучшения производительности. Однако для случая больших
        приложений этого не всегда достаточно. Мы поговорим о нестандартных способах ускорения
        работы приложения, затронем самые разные аспекты, как вопросы UI, так и инструментов и
        околосерверных вещей. Я надеюсь, что этот доклад заставит вас посмотреть на вопросы
        производительности по-новому и подумать о том, что вы можете сделать в своем приложении.
    </string>
</resources>